--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,5 +13,5 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts"
-, "app/index.js", "app/user.js"  ]
+, "app/index.js", "app/user.js", "app/perfpaci.js"  ]
 }
