--- a/app.json
+++ b/app.json
@@ -19,7 +19,7 @@
       "edgeToEdgeEnabled": true
     },
     "web": {
-      "bundler": "metro",
+      "bundler": "metro --tunnel",
       "output": "static",
       "favicon": "./assets/images/favicon.png"
     },
