--- a/package.json
+++ b/package.json
@@ -12,11 +12,13 @@
   },
   "dependencies": {
     "@expo/metro-runtime": "^6.1.2",
+    "@react-native-async-storage/async-storage": "2.2.0",
     "@react-navigation/bottom-tabs": "^7.3.10",
     "@react-navigation/elements": "^2.3.8",
     "@react-navigation/native": "^7.1.6",
     "axios": "^1.11.0",
     "expo": "~54.0.24",
+    "expo-auth-session": "~7.0.9",
     "expo-blur": "~15.0.7",
     "expo-constants": "~18.0.8",
     "expo-document-picker": "~14.0.7",
@@ -30,6 +32,7 @@
     "expo-symbols": "~1.0.7",
     "expo-system-ui": "~6.0.8",
     "expo-web-browser": "~15.0.9",
+    "firebase": "^12.6.0",
     "lucide-react-native": "^0.542.0",
     "react": "19.1.0",
     "react-dom": "19.1.0",
